fixed overflowing on image

--- a/index.css
+++ b/index.css
@@ -37,6 +37,9 @@ h2 {
 }
 
 img {
+    max-width: 450px;
+    width: auto;
+    height: auto;
     display: block;
     margin-left: auto;
     margin-right: auto;
